crates/autoresolve/tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.stderr
error[E0255]: the name `AppBase` is defined multiple times
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:24:9
   |
19 | #[base(helper_module_exported_as = crate::app_base_helper)]
   | ----------------------------------------------------------- previous definition of the type `AppBase` here
...
24 | pub use crate::AppBase;
   |         ^^^^^^^^^^^^^^ `AppBase` reimported here
   |
   = note: `AppBase` must be defined only once in the type namespace of this module
help: you can use `as` to change the binding name of the import
   |
24 | pub use crate::AppBase as OtherAppBase;
   |                        +++++++++++++++

warning: type `AppBase_Part0_Scheduler` should have an upper camel case name
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:21:20
   |
21 |     pub scheduler: Scheduler,
   |                    ^^^^^^^^^ help: convert the identifier to upper camel case: `AppBasePart0Scheduler`
   |
   = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: unused import: `crate::AppBase`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:24:9
   |
24 | pub use crate::AppBase;
   |         ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: type `RequestBase_Part0_Request` should have an upper camel case name
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:28:18
   |
28 |     pub request: Request,
   |                  ^^^^^^^ help: convert the identifier to upper camel case: `RequestBasePart0Request`

error[E0277]: the trait bound `Request: ResolveFrom<AppBase>` is not satisfied
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:36:26
   |
36 |     let _ = parent.get::<CorrelationVector>();
   |                    ---   ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |                    |
   |                    required by a bound introduced by this call
   |
help: the trait `ResolveFrom<AppBase>` is not implemented for `Request`
      but trait `ResolveFrom<RequestBase>` is implemented for it
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:26:1
   |
26 | #[base(scoped(AppBase), helper_module_exported_as = crate::request_base_helper)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `RequestBase`, found `AppBase`
note: required for `CorrelationVector` to implement `ResolveFrom<AppBase>`
  --> tests/compile_fail/scoped_type_not_resolvable_from_parent_cv.rs:12:1
   |
12 | #[resolvable]
   | ^^^^^^^^^^^^^ unsatisfied trait bound introduced here
13 | impl CorrelationVector {
   |      ^^^^^^^^^^^^^^^^^
note: required by a bound in `Resolver::<T>::get`
  --> src/resolver.rs
   |
   |     pub fn get<O>(&mut self) -> &O
   |            --- required by a bound in this associated function
   |     where
   |         O: ResolveFrom<T>,
   |            ^^^^^^^^^^^^^^ required by this bound in `Resolver::<T>::get`
   = note: this error originates in the macro `RequestBase` which comes from the expansion of the attribute macro `resolvable` (in Nightly builds, run with -Z macro-backtrace for more info)
